# -*- rdoc -*-

= NEWS for Ruby 2.7.0

This document is a list of user visible feature changes made between
releases except for bug fixes.

Note that each entry is kept so brief that no reason behind or reference
information is supplied with.  For a full list of changes with all
sufficient information, see the ChangeLog file or Redmine
(e.g. <tt>https://bugs.ruby-lang.org/issues/$FEATURE_OR_BUG_NUMBER</tt>)

== Changes since the 2.6.0 release

=== Language changes

* Method reference operator, <code>.:</code> is introduced as an
  experimental feature.  [Feature #12125] [Feature #13581]

* Proc.new and proc with no block in a method called with a block is warned
  now.

* lambda with no block in a method called with a block errs.

=== Core classes updates (outstanding ones only)

Enumerable::

  New method::

   * Added Enumerable#tally.  [Feature #11076]

Enumerator::

  New method::

   * Added Enumerator::Yielder#to_proc so that a Yielder object can be
     directly passed to another method as a block argument.
     [Feature #15618]

Regexp/String::

    * Update Unicode version and Emoji version from 11.0.0 to 12.0.0.
      [Feature #15321]

=== Stdlib updates (outstanding ones only)

CSV::

  * Upgrade to 3.0.4.
    See https://github.com/ruby/csv/blob/master/NEWS.md.

RSS::

  * Upgrade to RSS 0.2.8.
    See https://github.com/ruby/rss/blob/master/NEWS.md.

=== Compatibility issues (excluding feature bug fixes)

=== Stdlib compatibility issues (excluding feature bug fixes)

=== C API updates

=== Implementation improvements

=== Miscellaneous changes

* Require compilers to support C99 [Misc #15347]
  * Details of our dialect: https://bugs.ruby-lang.org/projects/ruby-trunk/wiki/C99